--- a/index3.html
+++ b/index3.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Tôi là Việt Khanh</h1>
-    <h3>Change part 1</h3>
-    <h2>Change part 2</h2>
+    <h1>Hello everyone !!!</h1>
 </body>
 </html>
